# quoridor-engine

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  quoridor_core.cp311-win_amd64.pyd  self_play.py  setup.py  test_distance.py
core/: env.py
cpp/: bindings.cpp  board.cpp  board.h  mcgs.cpp  mcgs.h
nn/: model.py  train.py
search/: mcgs.py
